--- a/css/styles.css
+++ b/css/styles.css
@@ -2,13 +2,9 @@
   border: 0;
   clip: rect(0 0 0 0);
   clip-path: inset(100%);
-  height: 1px;
   margin: -1px;
   overflow: hidden;
-  padding: 0;
-  position: absolute;
   white-space: nowrap;
-  width: 1px;
 }
 /* base */
 
@@ -26,18 +22,11 @@ ol {
   list-style-type: none;
 }
 
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-
 a {
   text-decoration: none;
 }
 
 .button {
-  display: block;
   color: #fff;
   background-color: #4d5ae5;
   font-weight: 500;
@@ -45,8 +34,6 @@ a {
   cursor: pointer;
   text-align: center;
   border: none;
-  border-radius: 4px;
-  padding: 16px 32px;
   margin: 0 auto;
 }
 
@@ -57,9 +44,6 @@ a {
 /* header */
 
 .header-menu {
-  display: flex;
-  gap: 20px;
-  align-items: center;
   justify-content: space-between;
 }
 
@@ -76,16 +60,6 @@ a {
   color: #2e2f42;
 }
 
-.header-nav-links {
-  display: flex;
-  gap: 20px;
-  align-items: center;
-}
-
-.navigation {
-  display: flex;
-  gap: 20px;
-}
 .nav-link {
   font-weight: 500;
   font-size: 16px;
@@ -95,20 +69,15 @@ a {
 }
 
 .nav-link:hover {
-  color: #404BBF;
+  color: #404bbf;
 }
 
 .nav-link:focus {
-  color: #404BBF;
+  color: #404bbf;
 }
 
 .address {
   font-style: normal;
-}
-
-.address-list {
-  display: flex;
-  gap: 20px;
 }
 
 .link-address {
@@ -129,7 +98,6 @@ a {
 
 .hero-s {
   background-color: #2e2f42;
-  padding: 188px 0;
 }
 .hero-title {
   font-weight: 700;
@@ -140,7 +108,6 @@ a {
   color: #fff;
 }
 .buttonn {
-  display: block;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -149,8 +116,6 @@ a {
   background-color: #4d5ae5;
   cursor: pointer;
   border: none;
-  border-radius: 4px;
-  padding: 16px 32px;
   margin: 0 auto;
 }
 .buttonn:hover,
